--- a/sds011-node/sds011-node.html
+++ b/sds011-node/sds011-node.html
@@ -7,8 +7,8 @@
     },
     inputs: 1,
     inputLabels: 'Command',
-    outputs: 3,
-    outputLabels: ['PM2.5', 'PM10', 'info'],
+    outputs: 2,
+    outputLabels: ['PM', 'info'],
     color: '#E9967A',
     icon: "serial.png",
     label: function() {
